--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,16 +24,16 @@ jobs:
       - name: Install and build
         run: |
           npm install
-          npm run build -- --base=/${{ github.event.repository.name }}/
+        # npm run build -- --base=/${{ github.event.repository.name }}/
 
-      - name: Deploy to github pages
-        uses: JamesIves/github-pages-deploy-action@4.1.0
-        with:
-          branch: gh-pages
-          folder: dist  
+      # - name: Deploy to github pages
+      #   uses: JamesIves/github-pages-deploy-action@4.1.0
+      #   with:
+      #     branch: gh-pages
+      #     folder: dist  
 
-      - name: Publish deployed code 
-        uses: actions/upload-artifact@v2
-        with:
-          name: published
-          path: dist
+      # - name: Publish deployed code 
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: published
+      #     path: dist
