--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Install and build
         run: |
-          npm install
+          yarn install
         # npm run build -- --base=/${{ github.event.repository.name }}/
 
       # - name: Deploy to github pages
