--- a/package.json
+++ b/package.json
@@ -1,20 +1,30 @@
 {
-  "name": "erp-mobilidade-frontend",
+  "name": "erp-mobilidade",
   "private": true,
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "bootstrap": "^5.1.3",
+    "@auth0/auth0-react": "^1.9.0",
+    "@pankod/refine": "^2.7.8",
+    "@pankod/refine-antd": "^3.9.0",
+    "@pankod/refine-core": "^3.9.0",
+    "@pankod/refine-react-router-v6": "^3.9.0",
+    "@pankod/refine-simple-rest": "^3.9.0",
+    "@pankod/refine-strapi-v4": "^3.9.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "6.0.1"
+    "react-mde": "^11.5.0",
+    "type": "^2.6.0"
   },
   "devDependencies": {
+    "@types/react": "^17.0.33",
+    "@types/react-dom": "^17.0.10",
     "@vitejs/plugin-react": "^1.0.7",
-    "vite": "^2.8.6"
+    "typescript": "^4.5.4",
+    "vite": "^2.9.0"
   }
 }
